Ensure current page indicator shows up in high contrast mode

--- a/www/styles/docs.scss
+++ b/www/styles/docs.scss
@@ -96,6 +96,11 @@
           transition-property: opacity;
           transition-duration: inherit;
           transition-timing-function: inherit;
+
+          @media (forced-colors: active) {
+            forced-color-adjust: none;
+            background-color: LinkText;
+          }
         }
 
         &:where(:hover, :focus) {
